test/expected/large/naturallanguagegeneration/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: naturalLanguageGeneration
    foo.com/duversion: 1.2.8-20190918.1568856760889
    foo.com/version: 1.2.8
  labels:
    app.kubernetes.io/name: naturallanguagegeneration
    helm.sh/chart: naturallanguagegeneration-1.2.8
  name: naturallanguagegeneration
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: naturallanguagegeneration
  type: ClusterIP
